Reviewed by Nikolas Zimmermann.

Fixes: https://bugs.webkit.org/show_bug.cgi?id=26474
Adding WML <card> title attribute handling.


Canonical link: https://commits.webkit.org/36848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45081 268f45cc-cd09-0410-ab3c-d52691b4dbfc